daylighting analysis.  Feature requested & explained by Axel Jacobs.

Modified -c option to rtcontrib so it can take a number of input
rays to average over, rather than only produce a single accumulated
record (which can now be done with -c 0).

=====================
Version 4.0

Added -n option to rvu to provide parallel rendering.

****** COMPATIBILITY CHANGE ********
Changed ".pic" extension to ".hdr" in all sources and documentation
to improve interoperability with other software, since this has become
the de facto extension for Radiance RGBE and XYZE pictures.  Since file
extensions were never more than a convention in Radiance, this does not
affect operation, but may require the update of scripts, etc. written
by others that assume the ".pic" suffix for Radiance output.

Added -N option to objview to support multiprocessing.

Improved sampling of circular sources (source, sphere, ring types) with
quite a bit of help from David Geisler-Moroder.

Added "rpict" and "rvu" variables to rad, and made these as well as
the "oconv", "mkillum" and "pfilt" variables accept an alternate
command path in each case.  Change suggested by Lars Grobe based
on similar Radzilla (radz) facility by Carsten Bauer.

Fixed rad -v N specification to use actual view name if one.

Fixed error in mkillum calculation where it neglected indirect
source contributions from BTDF illum's.

Added GMT and LATLONG header lines for Greenwich Mean Time and
degrees North Latitude / East Longitude.

Added gendaylit to distribution (finally).

Added ability in vwright(1) to get view from command line arguments.

Created genklemsamp(1) utility to generate samples suitable for
BSDF-based annual calculations.  This is the first Perl script to
be added to Radiance.  Hopefully, others will follow.

Added klems_int.cal file to compute Klems bins for windows.

Created gentregvec utility to sample a particular sky and
evaluate average radiance over the standard Tregenza sky patches.