@@ -1708,3 +1708,7 @@ Added klems_int.cal file to compute Klems bins for windows.
 
 Created gentregvec utility to sample a particular sky and
 evaluate average radiance over the standard Tregenza sky patches.
+
+Created dctimestep program to compute a set of sensor values or
+a combined image for a particular time using the daylight
+coefficient method.
